# coturn

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Dockerfile.build  INSTALL  LICENSE  Makefile  Makefile.in  NOTE  README.md  README.turnadmin  README.turnserver  README.turnutils  STATUS  STATUS.md  TODO  authors.sh  build-docker.sh  configure  coturn_4.5.0.3.orig.tar.gz.delta  coturn_4.5.0.3.orig.tar.gz.id  coturn_4.5.0.5.orig.tar.gz.delta  coturn_4.5.0.5.orig.tar.gz.id  coturn_4.5.0.7.orig.tar.gz.delta  coturn_4.5.0.8.orig.tar.gz.delta  coturn_4.5.0.8.orig.tar.gz.id  coturn_4.5.1.0.orig.tar.gz.delta  coturn_4.5.1.0.orig.tar.gz.id  coturn_4.5.1.1.orig.tar.gz.delta  coturn_4.5.1.1.orig.tar.gz.id  coturn_4.5.1.3.orig.tar.gz.delta  coturn_4.5.1.3.orig.tar.gz.id  (+12 more)
amazonlinuxami/: README.txt  turnserver-3.2.3.5-amazon-aws-ec2-x86_64.txt  turnserver-3.3.0.0-amazon-aws-ec2-x86_64.txt  turnserver-4.0.0.0-amazon-aws-ec2-x86_64.txt  turnserver-4.0.0.2-amazon-aws-ec2-x86_64.txt  turnserver-4.0.1.1-amazon-aws-ec2-x86_64.txt  turnserver-4.0.1.2-amazon-aws-ec2-x86_64.txt  turnserver-4.0.1.3-amazon-aws-ec2-x86_64.txt  turnserver-4.1.0.1-amazon-aws-ec2-x86_64.txt  turnserver-4.1.0.2-amazon-aws-ec2-x86_64.txt  turnserver-4.1.1.1-amazon-aws-ec2-x86_64.txt  turnserver-4.1.2.1-amazon-aws-ec2-x86_64.txt  turnserver-4.2.1.2-amazon-aws-ec2-x86_64.txt  turnserver-4.2.2.1-amazon-aws-ec2-x86_64.txt  turnserver-4.2.2.2-amazon-aws-ec2-x86_64.txt  turnserver-4.2.3.1-amazon-aws-ec2-x86_64.txt  turnserver-4.3.1.1-amazon-aws-ec2-x86_64.txt  turnserver-4.3.1.3-amazon-aws-ec2-x86_64.txt  turnserver-4.3.2.1-amazon-aws-ec2-x86_64.txt  turnserver-4.3.2.2-amazon-aws-ec2-x86_64.txt  turnserver-4.3.3.1-amazon-aws-ec2-x86_64.txt  turnserver-4.4.1.1-amazon-aws-ec2-x86_64.txt  turnserver-4.4.1.2-amazon-aws-ec2-x86_64.txt  turnserver-4.4.2.1-1-amazon-aws-ec2-x86_64.txt  turnserver-4.4.2.1-amazon-aws-ec2-x86_64.txt  turnserver-4.4.2.2-amazon-aws-ec2-x86_64.txt  turnserver-4.4.2.3-amazon-aws-ec2-x86_64.txt  turnserver-4.4.4.1-amazon-aws-ec2-x86_64.txt  turnserver-4.4.4.2-amazon-aws-ec2-x86_64.txt  turnserver-4.4.5.1-amazon-aws-ec2-x86_64.txt  turnserver-4.4.5.2-amazon-aws-ec2-x86_64.txt  turnserver-4.4.5.3-amazon-aws-ec2-x86_64.txt
cmake/: CMakeCPack.cmake  CMakeCPackOptions.cmake.in  CacheLog.cmake  FindLibevent.cmake  FindMicroHTTPD.cmake  FindMySQL.cmake  FindPostgreSQL.cmake  FindPrometheus.cmake  FindSQLite.cmake  cmake_uninstall.cmake.in  coturnConfig.cmake.in
debian/: README.Debian  changelog  control  copyright  coturn.default  coturn.dirs  coturn.doc-base  coturn.docs  coturn.init  coturn.install  coturn.links  coturn.lintian-overrides  coturn.manpages  coturn.postinst  coturn.postrm  coturn.service  gbp.conf  not-installed  rules  salsa-ci.yml  watch
debinstalltxt/: INSTALL
docker/: Dockerfile  README.docker  cp-schema.sh  docker-compose-all.yml  docker-compose-kamailio.yml  docker-compose-mysql.yml  (+5 more)
fuzzing/: CMakeLists.txt  Dockerfile  FuzzChannelData.c  FuzzOAuthRoundTrip.c  FuzzOAuthToken.c  FuzzOldStun.c  FuzzOpenSSLInit.c  FuzzStun.c  FuzzStunAddrCodec.c  FuzzStunAttrAdd.c  FuzzStunAttrIter.c  FuzzStunClient.c  FuzzStunIntegrity.c  FuzzStunParse.c  Fuzzing.md  Makefile  build.sh  docker-entrypoint.sh  run-local.sh  stun.dict
src/apps/common/: CMakeLists.txt  apputils.c  apputils.h  hiredis_libevent2.c  hiredis_libevent2.h  log4cplus.cpp  ns_turn_openssl.h  ns_turn_utils.c  ns_turn_utils.h  stun_buffer.c  stun_buffer.h
src/apps/common/win/: getopt.c  getopt.h
src/apps/natdiscovery/: CMakeLists.txt  natdiscovery.c
src/apps/oauth/: CMakeLists.txt  oauth.c  test.sh
src/apps/peer/: CMakeLists.txt  mainudpserver.c  udpserver.c  udpserver.h
src/apps/relay/: CMakeLists.txt  acme.c  acme.h  dtls_listener.c  dtls_listener.h  federation.c  federation.h  hiredis_libevent2.c  hiredis_libevent2.h  hostcheck.c  hostcheck.h  http_buffer.c  http_server.c  http_server.h  libtelnet.c  libtelnet.h  mainrelay.c  mainrelay.c.bak  mainrelay.h  multiplex_peer_tag.h  netengine.c  ns_ioalib_engine_impl.c  ns_ioalib_impl.h  ns_sm.h  prom_server.c  prom_server.h  tls_listener.c  tls_listener.h  turn_admin_server.c  turn_admin_server.h  turn_ports.c  turn_ports.h  turncli.c  turncli.h  userdb.c  userdb.h
src/apps/relay/dbdrivers/: dbd_mongo.c  dbd_mongo.h  dbd_mysql.c  dbd_mysql.h  dbd_pgsql.c  dbd_pgsql.h  dbd_redis.c  dbd_redis.h  dbd_redis_conninfo.c  dbd_redis_conninfo.h  dbd_rest.c  dbd_rest.h  dbd_sqlite.c  dbd_sqlite.h  dbdriver.c  dbdriver.h
src/apps/relay/ntfy_drivers/: ntfy_driver.c  ntfy_driver.h  udp_subscriber.c  udp_subscriber.h
src/apps/relay/windows/: CMakeLists.txt  Example.c  Service.cpp  Service.h  ServiceInstaller.cpp  ServiceInstaller.h
src/apps/rfc5769/: CMakeLists.txt  rfc5769check.c
src/apps/stunclient/: CMakeLists.txt  stunclient.c
src/apps/uclient/: CMakeLists.txt  mainuclient.c  session.h  startuclient.c  startuclient.h  uclient.c  uclient.h
src/client/: CMakeLists.txt  ns_turn_ioaddr.c  ns_turn_ioaddr.h  ns_turn_msg.c  ns_turn_msg.h  ns_turn_msg_addr.c  ns_turn_msg_addr.h  ns_turn_msg_defs.h  ns_turn_msg_defs_experimental.h  ns_turn_msg_defs_new.h
src/clientoauth/: CMakeLists.txt  ns_turn_oauth.c  ns_turn_oauth.h
src/server/: CMakeLists.txt  ns_turn_allocation.c  ns_turn_allocation.h  ns_turn_ioalib.h  ns_turn_khash.h  ns_turn_maps.c  ns_turn_maps.h  ns_turn_maps_rtcp.c  ns_turn_maps_rtcp.h  ns_turn_ratelimit.c  ns_turn_ratelimit.h  ns_turn_server.c  ns_turn_server.h  ns_turn_session.h
tests/: CMakeLists.txt  test_acme.c  test_alt_server_list.c  test_alt_server_stubs.c  test_base64.c  test_http_server.c  test_invariant_apputils.c  test_ioaddr.c  test_log_min_level.c  test_multiplex_tag.c  test_mysql_dbd.c  test_mysql_stub.c  test_mysql_stub.h  test_pgsql_dbd.c  test_pgsql_stub.c  test_pgsql_stub.h  test_prometheus.c  test_ratelimit.c  test_redis_conninfo.c  test_redis_format.c  test_sqlite_dbd.c  test_sqlite_support.c  test_sqlite_support.h  test_stun_msg.c  test_turn_ports.c
(+531 files in other folders)
